@@ -223,19 +223,24 @@ use-next-stage-tiles-tooltip=Each blueprint will contain the next stage's tiles.
 
 bp-export=Export
 
-get-blueprint-for-current-stage=Get blueprint for current stage
+get-blueprint-for-current-stage=Export current stage
 
-make-blueprint-book=Make blueprint book [img=info]
-make-blueprint-book-tooltip=Creates a blueprint book containing all stages.
+blueprint-book=Blueprint book
 
-edit-blueprint-book-template=Edit blueprint book template [img=info]
-edit-blueprint-book-template-tooltip=Edit the contents, icons, or description of the blueprint book.\nYou can also add other blueprints, books, deconstruction planners, or upgrade planners to the template, and they will be present in the final blueprint book.
+export-blueprint-book=Export blueprint book [img=info]
+export-blueprint-book-tooltip=Creates a blueprint book with all stages.
 
-reset-blueprint-book-template=Reset template to default
+edit-blueprint-book-template=Edit book template [img=info]
+edit-blueprint-book-template-tooltip=Edit the contents, icons, or description of the blueprint book.\nHandles nested blueprint books.\nYou can also add other blueprints, books, deconstruction planners, or upgrade planners to the template, and they will be present in the exported blueprint book.
+
+reset-blueprint-book-template=Reset book template
 reset-blueprint-book-template-confirmation=Are you sure you want to reset the blueprint book template?
 
-export-blueprint-book-string-to-file=Export book to file [img=info]
-export-blueprint-book-string-to-file-tooltip=Exports the blueprint book string to a file (located in <user-data-directory>/script-output).
+export-blueprint-book-to-file=Export to file [img=info]
+export-blueprint-book-to-file-tooltip=Exports the blueprint book string to a file located in <user-data-directory>/script-output.
+
+export-blueprint-book-to-string=Export to string [img=info]
+export-blueprint-book-to-string-tooltip=Exports the blueprint book string, which you can copy.
 
 enable-staged-tiles=Enable staged tiles (beta) [img=info]
 enable-staged-tiles-tooltip=Enables (basic) support for staged tiles. Placing a blueprintable tile will affect all later stages. \nIf enabling for the first time, you may want to click "Scan existing tiles".
@@ -249,6 +254,8 @@ sync-map-gen-settings-tooltip=Sets map gen settings for all stages to match the 
 delete-project=Delete project
 delete-project-confirmation1=Are you sure you want to delete project __1__?
 delete-project-confirmation2=This cannot be undone.
+
+blueprint-string-for=Blueprint string for __1__
 
 [bp100.gui.tasks]
 cancel=Cancel
@@ -265,7 +272,7 @@ set-landfill-tiles=__1__: setting landfill tiles
 take-stage-blueprint=__1__: taking blueprint
 set-next-stage-tiles=__1__: setting tiles
 finalize-blueprint-book=Finishing up
-export-blueprint-book-to-file=Exporting book to file
+export-blueprint-book=Exporting blueprint book
 
 
 [bp100.gui.entity-info]
