@@ -5,6 +5,9 @@ Date: ????
     - If using a blueprint book template, if the book template's name is not changed from default, it will match the project name.
     - Improved alignment of "Get reference" window in blueprint template gui.
     - Icons in blueprint book templates are updated when stage's icons are updated.
+    - Improved blueprint export gui layout.
+  Features:
+    - Added feature to export a project's blueprint book directly to a string.
 ---------------------------------------------------------------------------------------------------
 Version: 0.33.1
 Date: 2024-06-02
